# CSE573-Group27-Text2SQL

./: .gitignore  README.md
code/Traditional_ML_Baseline/: README.md  dataset.py  evaluate.py  full_pipeline_job.sh  model_seq2seq.py  preprocess.py  requirements.txt  train.py  vocab.py
code/Traditional_ML_Baseline/processed/: spider_dev_processed.jsonl  src_vocab.json  tgt_vocab.json
code/backend/: api.py  constants.py  main.py  pyproject.toml
code/backend/datasets/bird/: bird_subset_with_schema_new_t1.jsonl
code/backend/modules/: llm.py  verifiers.py
code/backend/modules/verifiers/: __init__.py  core.py  syntax_verifier.py
code/backend/utils/: data_loader.py  metadata_cache.py
code/frontend/: index.html  package-lock.json  package.json
code/frontend/src/: App.jsx
data/spider/: example_query.json  example_table.json  spider_dev_with_schema_new_t1.jsonl
evaluations/ablations/iter_ablation/c_iter_1/20260429_101328/: checkpoint.jsonl  logs.txt
evaluations/ablations/iter_ablation/c_iter_2/20260429_101328/: logs.txt
evaluations/ablations/iter_ablation/c_iter_3/20260429_101629/: logs.txt
evaluations/baselines/flan-t5-base/20260428_165548/: baseline_20260428_170437.json  checkpoint.jsonl  logs.txt
evaluations/baselines/flan-t5/20260428_165401/: baseline_20260428_170038.json  checkpoint.jsonl  logs.txt
evaluations/baselines/qwen2.5-0.5b/20260428_165207/: baseline_20260428_165539.json  checkpoint.jsonl  logs.txt
evaluations/baselines/traditional_ml_baseline/: pred.txt  slurm.51546664.out
(+5 files in other folders)
